[gd_scene load_steps=12 format=3 uid="uid://drdpdufrfo5c7"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_t8phu"]
[ext_resource type="Texture2D" uid="uid://bhgyp4t6l6jx1" path="res://UI Textures/background.png" id="2_brakp"]
[ext_resource type="FontFile" uid="uid://dbt7t2auf2v2o" path="res://Characters/Extras/TrayMaterials/Fonts/Insaniburger-0OZ9.ttf" id="2_l6qm5"]
[ext_resource type="Theme" uid="uid://cekdep6cyhmu4" path="res://UI/ButtonTheme1.tres" id="2_vy57y"]
[ext_resource type="Texture2D" uid="uid://bwvq48bbrohtq" path="res://UI Textures/top_bun_smaller.png" id="4_shmxq"]
[ext_resource type="Texture2D" uid="uid://3l3c5twohq3a" path="res://UI Textures/burger_mijloc_small.png" id="6_nxe1q"]
[ext_resource type="Texture2D" uid="uid://rd213u0tnbdy" path="res://UI Textures/low_bun_smalll.png" id="7_3wj32"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mg70h"]
texture = ExtResource("2_brakp")

[sub_resource type="Theme" id="Theme_nlhlu"]
PanelContainer/styles/panel = SubResource("StyleBoxTexture_mg70h")

[sub_resource type="LabelSettings" id="LabelSettings_y05g4"]
font = ExtResource("2_l6qm5")
font_size = 100

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vo6vr"]
content_margin_left = 100.0
region_rect = Rect2(-482.155, 91.9993, 1874.31, 474.778)

[node name="MainScreen" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.983
offset_bottom = 32.64
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_t8phu")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_nlhlu")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "JUMPFOOD"
label_settings = SubResource("LabelSettings_y05g4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 1500)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = -200
columns = 2

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 141
text = "Sign in
"

[node name="Play" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_vy57y")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxTexture_vo6vr")
text = "Play"
icon_alignment = 1

[node name="TopBun" type="TextureRect" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4_shmxq")
stretch_mode = 3

[node name="Setings" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_vy57y")
theme_override_font_sizes/font_size = 64
text = "Settings

"

[node name="Middle" type="TextureRect" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_nxe1q")
stretch_mode = 3

[node name="Leaderboard" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_vy57y")
theme_override_font_sizes/font_size = 64
disabled = true
text = "Scores
"

[node name="LowerBun" type="TextureRect" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("7_3wj32")
stretch_mode = 3

[connection signal="button_down" from="PanelContainer/VBoxContainer/GridContainer/Button" to="." method="_on_sign_in"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GridContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GridContainer/Setings" to="." method="_on_setings_pressed"]
